SERVER-21078 - Fix race conditions by using the session cache more within the wtkv engine code