src/mongo/db/storage/wiredtiger/wiredtiger_kv_engine.cpp
@@ -292,9 +292,9 @@ Status WiredTigerKVEngine::repairIdent(OperationContext* opCtx, StringData ident
 }
 
 Status WiredTigerKVEngine::_salvageIfNeeded(const char* uri) {
-    // Using a side session to avoid transactional issues
-    WiredTigerSession sessionWrapper(_conn);
-    WT_SESSION* session = sessionWrapper.getSession();
+    auto sessionWrapper = _sessionCache->getSession();
+    auto returnSession = MakeGuard([&] { _sessionCache->releaseSession(sessionWrapper); });
+    WT_SESSION* session = sessionWrapper->getSession();
 
     int rc = (session->verify)(session, uri, NULL);
     if (rc == 0) {
@@ -319,10 +319,10 @@ int WiredTigerKVEngine::flushAllFiles(bool sync) {
     LOG(1) << "WiredTigerKVEngine::flushAllFiles";
     syncSizeInfo(true);
 
-    WiredTigerSession session(_conn);
-    WT_SESSION* s = session.getSession();
+    auto session = _sessionCache->getSession();
+    auto returnSession = MakeGuard([&] { _sessionCache->releaseSession(session); });
+    WT_SESSION* s = session->getSession();
     invariantWTOK(s->checkpoint(s, NULL));
-
     return 1;
 }
 
@@ -373,7 +373,8 @@ Status WiredTigerKVEngine::createRecordStore(OperationContext* opCtx,
                                              StringData ident,
                                              const CollectionOptions& options) {
     _checkIdentPath(ident);
-    WiredTigerSession session(_conn);
+    auto session = _sessionCache->getSession();
+    auto returnSession = MakeGuard([&] { _sessionCache->releaseSession(session); });
 
     StatusWith<std::string> result =
         WiredTigerRecordStore::generateCreateString(ns, options, _rsOptions);
@@ -383,7 +384,7 @@ Status WiredTigerKVEngine::createRecordStore(OperationContext* opCtx,
     std::string config = result.getValue();
 
     string uri = _uri(ident);
-    WT_SESSION* s = session.getSession();
+    WT_SESSION* s = session->getSession();
     LOG(2) << "WiredTigerKVEngine::createRecordStore uri: " << uri << " config: " << config;
     return wtRCToStatus(s->create(s, uri.c_str(), config.c_str()));
 }
@@ -515,10 +516,11 @@ void WiredTigerKVEngine::dropAllQueued() {
     set<string> deleted;
 
     {
-        WiredTigerSession session(_conn);
+        auto session = _sessionCache->getSession();
+        auto returnSession = MakeGuard([&] { _sessionCache->releaseSession(session); });
         for (set<string>::const_iterator it = mine.begin(); it != mine.end(); ++it) {
             string uri = *it;
-            int ret = session.getSession()->drop(session.getSession(), uri.c_str(), "force");
+            int ret = session->getSession()->drop(session->getSession(), uri.c_str(), "force");
             LOG(1) << "WT queued drop of  " << uri << " res " << ret;
 
             if (ret == 0) {
